Sjednocení některých věcí v kapitole 2

--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -15,6 +15,10 @@
 		{Test Data In}
 	\acro{TDO}
 		{Test Data Out}
+	\acro{TCKC}
+		{Test Clock Compact}
+	\acro{TMSC}
+		{Test Mode Select Compact}
 	\acro{TRST}
 		{Test Reset Input}
 	\acro{TAP}
